# wopt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
src/wopt/: __init__.py  cli.py  models.py
src/wopt/checks/: __init__.py  base.py  cookies.py  cors.py  exposure.py  headers.py  tls.py
src/wopt/core/: http_client.py  scanner.py
src/wopt/report/: ai_context_output.py  html_output.py  json_output.py  scoring.py
src/wopt/report/templates/: report.html.j2
tests/: conftest.py  test_cookies.py  test_cors.py  test_headers.py  test_scoring.py  test_tls.py
